# wind-lang

./: .gitignore  Cargo.toml  test.default.wind
WSR/: 0.md
crates/wind/: Cargo.toml
crates/wind-cli/: Cargo.toml
crates/wind-cli/src/: main.rs
crates/wind-cli/src/modules/: mod.rs
crates/wind-cli/src/modules/implements/: log_level.rs  utils.rs
crates/wind-cli/src/modules/types/: cli.rs  mod.rs
crates/wind-frontend/: Cargo.toml
crates/wind-frontend/src/: lib.rs
crates/wind-frontend/src/modules/implements/: mod.rs  tokens.rs
crates/wind-frontend/src/modules/implements/ast/: binary_op.rs  mod.rs  parse.rs  ty.rs  unary_op.rs
crates/wind-frontend/src/modules/types/: mod.rs  tokens.rs
crates/wind-frontend/src/modules/types/ast/: assign_op.rs  binary_op.rs  expr.rs  fn_param.rs  fn_signature.rs  group_rule.rs  mod.rs  parse_error.rs  parser.rs  program.rs  stmt.rs  struct_field.rs  ty.rs  unary_op.rs  which_clause.rs
crates/wind-ir/: Cargo.toml
crates/wind-sa/: Cargo.toml
crates/wind-sa/src/: lib.rs
crates/wind-sa/src/modules/: mod.rs  types.rs
crates/wind-sa/src/modules/implements/: bindings.rs  condition_id.rs  constraint_checker.rs  constraints.rs  enum_id.rs  fn_signature_id.rs  gather.rs  liveness.rs  mangled_name.rs  mod.rs  resolve.rs  resolved_type.rs  scope.rs  scope_id.rs  scope_tree.rs  semantic_error.rs  struct_id.rs  symbol.rs  trait_id.rs  type_id.rs  type_ref.rs  typeck.rs  value_id.rs  value_pool.rs  which_clause_ref.rs
crates/wind-sa/src/modules/types/: bindings.rs  condition_id.rs  drop_point.rs  enum_id.rs  expr_ref.rs  filed_info.rs  fn_signature_id.rs  fn_signature_info.rs  gather.rs  group_rule.rs  live_range.rs  mangled_name.rs  mod.rs  resolved_type.rs  scope.rs  scope_id.rs  scope_kind.rs  scope_tree.rs  semantic_error.rs  storage_class.rs  struct_id.rs  symbol.rs  trait_id.rs  type_id.rs  type_ref.rs  types.rs  value_id.rs  value_info.rs  value_kind.rs  value_pool.rs  which_clause_ref.rs
crates/wind-test/: Cargo.toml
crates/wind-test/src/: main.rs
crates/wind/src/: lib.rs  main.rs
crates/wind/src/modules/implements/: mod.rs  utils.rs
crates/wind/src/modules/types/: cli.rs  log_level.rs  utils.rs
test/grammar/: test.default.wind
