[workspace]
members = ["crates/wind-cli","crates/wind-frontend", "crates/wind-ir", "crates/wind-sa"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.95.0"
homepage = "https://github.com/starwindv/"
description = "Wind 是一个实验性语言, 仅用于验证理念"

[workspace.dependencies]
log = "0.4.29"
clap = { version = "4.6.1", features = ["derive"] }
log4rs = "1.4.0"
logos = "0.16.1"
chumsky = { version = "0.13.0", features = [
    "extension", "regex", "serde", "pratt", "default"
] }
recursion = "0.5.4"
codespan-reporting = "0.13.1"
egg = { version = "0.11.0" }
inkwell = { version = "0.9.0", features = ["llvm18-1"] }
