[package]
name = "wind-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "wind"
path = "src/main.rs"

[dependencies]
log4rs = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
wind-frontend = { path = "../wind-frontend" }
wind-sa = { path = "../wind-sa" }
