[package]
name = "wind-frontend"
version.workspace = true
edition.workspace = true
description = "Wind-Lang 的前端"

[dependencies]
thiserror = { workspace = true }
chumsky = { version = "0.13.0", features = [ "extension", "regex", "serde" ] }
log = { workspace = true }
logos = "0.16.1"


[lib]
path = "src/lib.rs"
