[package]
name = "wind-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "这里是 wind-lang 的中端 ir 生成、绑定与优化区"

[lib]
path = "src/lib.rs"

[dependencies]
egg = { workspace = true }
inkwell = { workspace = true }
