[package]
name = "wind-sa"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "这里是 wind-lang 的语义分析子包"

[lib]
path = "src/lib.rs"

[dependencies]
log = { workspace = true }
recursion = { workspace = true }
codespan-reporting = { workspace = true }
