[package]
name = "wind-test"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
wind-frontend = { path = "../wind-frontend" }
log = { workspace = true }
log4rs = { workspace = true }
