[package]
name = "wind"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description.workspace = true


[dependencies]
log4rs = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
wind-frontend = { path = "../wind-frontend" }
